Modification des styles CSS pour améliorer la réactivité : ajustement de la taille d'arrière-plan, ajout d'alignement et de marges pour la section .shop, et correction de la position des boutons pour un meilleur affichage.

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ body {
 header {
    background-image: url("../images/mobile-image-hero-1.jpg");
    background-repeat: no-repeat;
-   background-size: contain;
+   background-size: 100% 100%;
    height: 17rem;
    width: 100%;
    display: flex;
@@ -110,10 +110,13 @@ button {
 }
 .shop {
    display: flex;
+   align-items: baseline;
+   height: 1rem;
+   margin-bottom: 1rem;
 }
 .shop p {
    color: var(--Black);
-   font-weight: 300;
+   font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 10px;
    margin: 0 1rem 1.5rem 0;
@@ -125,13 +128,14 @@ button {
 .shop img {
    cursor: pointer;
 }
+
 .buttons {
    display: flex;
 
    @media (width < 376px) {
-      /* position: absolute;
-      top: 11.4rem;
-      right: 0; */
+      position: absolute;
+      top: 216px;
+      right: 0;
    }
 }
 .buttons button {
